OtusMicroServices/UserService.Api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: userservice
  type: ClusterIP
